# trivia-night

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Trivia.cpp  Trivia.h  main.cpp
aelliixx.cpp-inquirer/include/aelliixx/: inquirer.h
include/: GameResults.h  os_dependent.h
lamarrr.chalk/include/lamarrr/: chalk.h
